# WeatherStation

./: .gitignore  Cargo.toml  server.py
config/: log4rs.yaml
data/: data_2022-11-20.csv  data_2022-11-20.py  data_2022-12-11.csv
gui/: index.html
src/: main.rs
