[package]
name = "wetterstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.x", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
futures = "0.3"
pretty_env_logger = "0.4"

[dependencies.url]
git = "https://github.com/servo/rust-url"
