[package]
name = "wetterstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.x", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
futures = "0.3"
log = "0.4"
log4rs = "1.2.0"

[dependencies.url]
git = "https://github.com/servo/rust-url"
